[gd_scene load_steps=8 format=3 uid="uid://bn7ky1bwh5ep6"]

[ext_resource type="Script" uid="uid://bl7gmoacd3js7" path="res://ui/hud/UpgradeMenu.gd" id="1_2og1b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.102, 0.102, 0.102, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.851, 1, 0.8)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0.851, 1, 0.3)
shadow_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(1, 0.843137, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_subtitle"]
font_size = 24
font_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card_normal"]
bg_color = Color(0.165, 0.165, 0.165, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.267, 0.267, 0.267, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card_pressed"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card_hover"]
bg_color = Color(0.22, 0.22, 0.22, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.851, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0.851, 1, 0.5)
shadow_size = 12

[node name="UpgradeMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2og1b")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="VBox" type="VBoxContainer" parent="Container/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TitleLabel" type="Label" parent="Container/Panel/VBox"]
layout_mode = 2
text = "Â¡NIVEL COMPLETADO!"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLabel" type="Label" parent="Container/Panel/VBox"]
layout_mode = 2
text = "Selecciona una recompensa"
label_settings = SubResource("LabelSettings_subtitle")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Container/Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CardContainer" type="HBoxContainer" parent="Container/Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonOption1" type="Button" parent="Container/Panel/VBox/CardContainer"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_card_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_card_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_card_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_card_hover")
text = "TITULO
Descripcion"
autowrap_mode = 3

[node name="ButtonOption2" type="Button" parent="Container/Panel/VBox/CardContainer"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_card_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_card_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_card_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_card_hover")
text = "TITULO
Descripcion"
autowrap_mode = 3

[node name="ButtonOption3" type="Button" parent="Container/Panel/VBox/CardContainer"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_card_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_card_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_card_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_card_hover")
text = "TITULO
Descripcion"
autowrap_mode = 3
